Fix spacing

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -95,15 +95,18 @@ hide
 article
   height: 40vh
   transition: color 5s fade-in
+  p
+    line-height: 2em
+    margin-left: 7em
+    margin-right: 7em
 header
   text-transform: uppercase
 aside
   display: inline-block
 img
   display: block
-  margin: 1em auto 4em
+  margin: 0 auto 1em
   padding-top: 3em
-  text-align: auto
   width: 100px
 [v-cloak]
   opacity: 0
